--- a/Animation.html
+++ b/Animation.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <litle>Transition And Animation</litle>
+        <title>demo</title>
         <style>
             h3{
                 width:max-content;
