--- a/.vscode/24-11-2023/eve,arr.html
+++ b/.vscode/24-11-2023/eve,arr.html
@@ -6,11 +6,11 @@
     <body>
         <script src="eve,arr.js">
 </script>
-<!-- <p> Click the following button and see result</p>
+<p> Click the following button and see result</p>
 <input type="button" onclick="Hello()" value="click"/> <br> <br>
 <button onclick="this.innerHTML = Date()">The time is?</button>
 <p>Bring your mouse inside the division to see the result:</p>
 <div onmouseover="over()" onmouseout="out()">
-<h2> This is inside the division </h2> -->
+<h2> This is inside the division </h2>
     </body>
 </html>
